--- a/LuckyTickets/LuckyTickets.csproj
+++ b/LuckyTickets/LuckyTickets.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PiterTicketAnalyzator.cs" />
+    <Compile Include="MoscowTicketAnalyzator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TicketAnalyzator.cs" />
+    <Compile Include="Validator.cs" />
+    <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
