--- a/LuckyTickets/LuckyTickets.csproj
+++ b/LuckyTickets/LuckyTickets.csproj
@@ -43,10 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PiterTicketAnalyzator.cs" />
-    <Compile Include="MoscowTicketAnalyzator.cs" />
+    <Compile Include="TicketHelper.cs" />
+    <Compile Include="ITicketAlgorithm.cs" />
+    <Compile Include="PiterAlgorithm.cs" />
+    <Compile Include="MoskowAlgorithm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ticket.cs" />
     <Compile Include="TicketAnalyzator.cs" />
     <Compile Include="Validator.cs" />
     <Compile Include="UI.cs" />
